--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "deco-sites/freqgirassol/": "./",
     "$store/": "./",
     "deco/": "https://denopkg.com/deco-cx/deco@1.54.2/",
+    "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.24.2/",
     "apps/": "https://denopkg.com/deco-cx/apps@0.33.8/",
     "$fresh/": "https://deno.land/x/fresh@1.6.3/",
     "preact": "https://esm.sh/preact@10.19.2",
