--- a/deno.json
+++ b/deno.json
@@ -2,15 +2,15 @@
   "imports": {
     "deco-sites/freqgirassol/": "./",
     "$store/": "./",
-    "deco/": "https://denopkg.com/deco-cx/deco@1.54.2/",
-    "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.24.2/",
-    "apps/": "https://denopkg.com/deco-cx/apps@0.33.8/",
-    "$fresh/": "https://deno.land/x/fresh@1.6.3/",
-    "preact": "https://esm.sh/preact@10.19.2",
-    "preact/": "https://esm.sh/preact@10.19.2/",
+    "deco/": "https://denopkg.com/deco-cx/deco@1.61.4/",
+    "deco-sites/std/": "https://denopkg.com/deco-sites/std@1.25.1/",
+    "apps/": "https://denopkg.com/deco-cx/apps@0.36.13/",
+    "$fresh/": "https://deno.land/x/fresh@1.6.8/",
+    "preact": "https://esm.sh/preact@10.19.6",
+    "preact/": "https://esm.sh/preact@10.19.6/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.2",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "std/": "https://deno.land/std@0.190.0/",
     "partytown/": "https://denopkg.com/deco-cx/partytown@0.4.8/",
     "daisyui": "npm:daisyui@4.6.0"
@@ -30,24 +30,9 @@
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts"
   },
-  "githooks": {
-    "pre-commit": "check"
-  },
-  "exclude": [
-    "node_modules",
-    "static/",
-    "README.md",
-    "_fresh",
-    "**/_fresh/*"
-  ],
-  "lint": {
-    "rules": {
-      "tags": [
-        "fresh",
-        "recommended"
-      ]
-    }
-  },
+  "githooks": { "pre-commit": "check" },
+  "exclude": ["node_modules", "static/", "README.md", "_fresh", "**/_fresh/*"],
+  "lint": { "rules": { "tags": ["fresh", "recommended"] } },
   "nodeModulesDir": true,
   "compilerOptions": {
     "jsx": "react-jsx",
